2005-07-07  G Goodwill <ggg2sforge at sourceforge.net>

	* dataxfer.c, devcfg.c: Added support for cygwin.

2005-07-07  Rajiv Aaron Manglani <rajav at gentoo.org>

	* configure.in: Make the use of tcp wrappers optional.
	
2005-06-13  Yura Kalinichenko <yuk@iceb.vinnitsa.com>

	* controller.c, devcfg.c, ser2net.8, ser2net.conf: Added 57600
	baud support.

	* dataxfer.c: Don't to breaks on printer lines.

2005-02-12  Corey Minyard <minyard@acm.org>

	* configure.in: Move to version 2.2.

2005-02-11  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Add a missing break statement after case 7
	in the com_port_handler() function.

2004-11-29  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Remove UUCP lock if the setup of the device fails.

2004-05-08  Marc Haber

	* ser2net.h: Set the man page section to the right value.

2004-01-24  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Don't attempt to disconnect an unconnected port.

2003-12-20  Corey Minyard <minyard@acm.org>

	* dataxfer.c, ser2net.8: Added the ability to have port 0 mean use
	standard in/out.  This way, you can invoke ser2net from inetd.

	* devcfg.c: Allow "," to be used as an option separator.

	* readconfig.c: Fix handling of lines coming from "-C".

	* ser2net.c: Move creation of the selector to before the option
	processing, for support of "-C'.

2003-12-19  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Handle receive IACs from the terminal to the TCP
	port, duplicating them so they will come through right.

	* telnet.c: Reset the telnet protocol state after two IACs are
	received.

	* readconfig.c, readconfig.h, ser2net.c, ser2net.8: Added a way to
	specify individual config lines on the command line so that no
	config file is necessary.

2003-12-04  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Add responses for all the telnet com port
	control commands that we handle.

	* telnet.c: Fixed IAC processing in suboption to be able
	to handle a stream of IACs properly.
